fix logic business